fix(formfield): remove label z-index (#390)

--- a/projects/ng-aquila/src/formfield/formfield.scss
+++ b/projects/ng-aquila/src/formfield/formfield.scss
@@ -84,7 +84,6 @@ $outline-padding: 7px;
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 10;
 
   [dir="rtl"] & {
     right: 0;
